@@ -32,7 +32,7 @@ apr_time_t md_timeperiod_length(const md_timeperiod_t *period);
 int md_timeperiod_contains(const md_timeperiod_t *period, apr_time_t time);
 int md_timeperiod_has_started(const md_timeperiod_t *period, apr_time_t time);
 int md_timeperiod_has_ended(const md_timeperiod_t *period, apr_time_t time);
-md_timeperiod_t md_timeperiod_remaining(const md_timeperiod_t *period, apr_time_t time);
+apr_interval_time_t md_timeperiod_remaining(const md_timeperiod_t *period, apr_time_t time);
 
 char *md_timeperiod_print(apr_pool_t *p, const md_timeperiod_t *period);
 
