@@ -1,3 +1,5 @@
+ * backoff timing for failed ocsp retrieval attempts. specific ocsp update will be
+   delayed accordingly.
  * ocsp responses up for renewal are checked periodically for updates in the store.
  * ocsp responses are now saved in and retrieved from store. Concurrent access in place, timed
    invalidation handling still missing.
